<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.Registration">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="@dimen/banner_size"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:scaleType="centerCrop"
        android:src="@drawable/banner" />

    <LinearLayout
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_phone"
                android:imeActionId="@+id/register"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/action_register" />

    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
        <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
        <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
        <!--android:orientation="vertical">-->

        <!--<android.support.v7.widget.AppCompatTextView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:gravity="center"-->
            <!--android:text="Already have a verified mobile no?" />-->

        <!--<android.support.v7.widget.AppCompatButton-->
            <!--android:id="@+id/btnLogin"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
            <!--android:background="@drawable/round_button_border"-->
            <!--android:text="Verify"-->
            <!--android:textColor="@color/colorAccent" />-->
    <!--</LinearLayout>-->
</RelativeLayout>
