<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <!--<android.support.v7.widget.AppCompatImageView-->
    <!--android:id="@+id/banner"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@color/colorAccent"-->
    <!--android:scaleType="centerInside"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:padding="20dp"-->
    <!--android:src="@drawable/logo_large"-->
    <!--/>-->

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorAmber"
        android:textStyle="bold"
        android:textSize="25dp"
        android:padding="20dp"
        android:gravity="center"
        android:maxLines="3"
        android:text="FAST/PET Screening Tool" />


    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblHeading"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <!--<android.support.v7.widget.AppCompatTextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="Welcome back!"-->
        <!--android:textColor="@color/colorAccent"-->
        <!--android:textSize="22dp"-->
        <!--android:gravity="center"-->
        <!--/>-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:text="" />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnVerify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="@string/action_sign_in_short" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/lblPoweredBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/colorAccent"
        android:padding="20dp"
        android:gravity="center"
        android:maxLines="3"
        android:text="Powered by Streams Tech Limited" />

</RelativeLayout>
